--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src 'self' 'unsafe-inline' *; img-src 'self' data: https:;font-src 'self' data: https:;"
+    />
+
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>powwow-ng-front</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but powwow-ng-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but powwow-ng-front doesn't work properly without JavaScript enabled. Please
+        enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?client=<%= VUE_APP_GMAP_CLIENT %>&channel=<%= VUE_APP_GMAP_CHANNEL %>"
+      async
+      defer
+    ></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
