--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -76,11 +76,10 @@
         enable it to continue.</strong
       >
     </noscript>
-    <div id="app">
-      <div id="loader">
-        <div class="spinner spinner-l spinner-dark"></div>
-      </div>
+    <div id="app-loader" class="loader">
+      <div class="spinner spinner-l spinner-dark"></div>
     </div>
+    <div id="app"></div>
 
     <script
       src="https://maps.googleapis.com/maps/api/js?client=<%= VUE_APP_GMAP_CLIENT %>&channel=<%= VUE_APP_GMAP_CHANNEL %>"
