--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -76,6 +76,7 @@
       <div class="spinner spinner-l spinner-dark"></div>
     </div>
     <div id="app"></div>
+    <script src="/worldmap.js"></script>
 
     <script
       src="https://maps.googleapis.com/maps/api/js?client=<%= VUE_APP_GMAP_CLIENT %>&channel=<%= VUE_APP_GMAP_CHANNEL %>"
